# EvoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
EvoEngine_App/: CMakeLists.txt  DatasetGeneratorApp.cpp  DemoApp.cpp  DigitalAgricultureApp.cpp  EcoSysLabApp.cpp  LogGraderApp.cpp  SorghumDataGeneratorApp.cpp  TreeDataGeneratorApp.cpp
EvoEngine_App/DatasetGeneration/: CMakeLists.txt  DatasetGeneratorApp.cpp
EvoEngine_App/Demo/: CMakeLists.txt  Demo.cpp
EvoEngine_App/Demo/Planet/include/: PerlinNoiseStage.hpp  PlanetTerrain.hpp  PlanetTerrainSystem.hpp  TerrainChunk.hpp  TerrainConstructionStageBase.hpp
EvoEngine_App/Demo/Planet/src/: PerlinNoiseStage.cpp  PlanetTerrain.cpp  PlanetTerrainSystem.cpp  TerrainChunk.cpp  TerrainConstructionStageBase.cpp
EvoEngine_App/Demo/StarCluster/include/: StarClusterSystem.hpp
EvoEngine_App/Demo/StarCluster/src/: StarClusterSystem.cpp
EvoEngine_App/DigitalAgriculture/: CMakeLists.txt  DigitalAgricultureApp.cpp  imgui.ini
EvoEngine_App/EcoSysLab/: CMakeLists.txt  DatasetGeneratorApp.cpp  EcoSysLabApp.cpp  LogGraderApp.cpp  SorghumFactoryApplication.cpp
EvoEngine_App/TextureBaking/: CMakeLists.txt  TextureBakingApp.cpp  imgui.ini
EvoEngine_Plugins/: CMakeLists.txt
EvoEngine_Plugins/BillboardClouds/: CMakeLists.txt
EvoEngine_Plugins/BillboardClouds/include/: BillboardCloud.hpp  BillboardCloudsConverter.hpp
EvoEngine_Plugins/BillboardClouds/src/: BillboardCloud.cpp  BillboardCloudBranchMode.cpp  BillboardCloudFlipbookMode.cpp  BillboardCloudFoliageMode.cpp  BillboardCloudOuterShellMode.cpp  BillboardCloudsConverter.cpp
EvoEngine_Plugins/CpuRayTracer/: CMakeLists.txt
EvoEngine_Plugins/CpuRayTracer/include/: CpuRayTracer.hpp  CpuRayTracerCamera.hpp
EvoEngine_Plugins/CpuRayTracer/src/: CpuRayTracer.cpp  CpuRayTracerCamera.cpp
EvoEngine_Plugins/DatasetGeneration/: CMakeLists.txt
EvoEngine_Plugins/DatasetGeneration/include/: DatasetGenerator.hpp  PointCloudScannerUtils.hpp  SorghumPointCloudScanner.hpp  TreePointCloudScanner.hpp
EvoEngine_Plugins/DatasetGeneration/src/: DatasetGenerator.cpp  SorghumPointCloudScanner.cpp  TreePointCloudScanner.cpp
EvoEngine_Plugins/DigitalAgriculture/: CMakeLists.txt
EvoEngine_Plugins/DigitalAgriculture/include/: Sorghum.hpp  SorghumCoordinates.hpp  SorghumLayer.hpp
EvoEngine_Plugins/DigitalAgriculture/src/: CBTFGroup.cpp  CBTFImporter.cpp  DoubleCBTF.cpp  PARSensorGroup.cpp  SkyIlluminance.cpp  Sorghum.cpp  SorghumCoordinates.cpp  SorghumDescriptor.cpp  SorghumDescriptorGenerator.cpp  SorghumField.cpp  SorghumGrowthStage.cpp  SorghumGrowthStages.cpp  SorghumLayer.cpp  SorghumSpline.cpp  SorghumState.cpp  SorghumStateGenerator.cpp
EvoEngine_Plugins/EcoSysLab/: CMakeLists.txt
EvoEngine_Plugins/EcoSysLab/include/: Climate.hpp  DynamicTreeStrands.hpp  ForestDescriptor.hpp  Json.hpp  SimulationSettings.hpp  Soil.hpp  SpatialPlantDistributionSimulator.hpp  Tree.hpp
EvoEngine_Plugins/EcoSysLab/python/: PythonBinding.cpp
EvoEngine_Plugins/EcoSysLab/src/: AlphaShapeMeshGenerator.cpp  BarkDescriptor.cpp  BrokenBranch.cpp  CBTFGroup.cpp  CBTFImporter.cpp  Climate.cpp  ClimateModel.cpp  CosseratRods.cpp  CubeVolume.cpp  DoubleCBTF.cpp  DynamicStrands.cpp  DynamicStrandsPhysics.cpp  DynamicStrandsRender.cpp  DynamicStrandsVisualization.cpp  DynamicTreeStrands.cpp  EcoSysLabLayer.cpp  EnvironmentGrid.cpp  FlowerDescriptor.cpp  FoliageDescriptor.cpp  ForestDescriptor.cpp  FruitDescriptor.cpp  HeightField.cpp  IVolume.cpp  IterativeSlicingMeshGenerator.cpp  Json.cpp  LSystemString.cpp  LogGrader.cpp  MarchingCubeMeshGenerator.cpp  MarchingCubes.cpp  Noises.cpp  ObjectRotator.cpp  PARSensorGroup.cpp  ParticleGrid2D.cpp  ParticlePhysics2DDemo.cpp  Physics2DDemo.cpp  PipeProfile.cpp  ProceduralNoise.cpp  ProfileConstraints.cpp  RadialBoundingVolume.cpp  ShootDescriptor.cpp  (+21 more)
EvoEngine_Plugins/Gpr/: CMakeLists.txt
EvoEngine_Plugins/Gpr/include/: Gpr.hpp
EvoEngine_Plugins/Gpr/src/: Gpr.cpp
EvoEngine_Plugins/LogGrading/: CMakeLists.txt
EvoEngine_Plugins/LogGrading/include/: LogGrader.hpp  LogWood.hpp
EvoEngine_Plugins/LogGrading/src/: LogGrader.cpp  LogWood.cpp
EvoEngine_Plugins/LogScanning/: CMakeLists.txt
EvoEngine_Plugins/LogScanning/include/: JoeScanScanner.hpp  LogScan.hpp
EvoEngine_Plugins/LogScanning/src/: JoeScanScanner.cpp  LogScan.cpp
EvoEngine_Plugins/MeshRepair/: CMakeLists.txt
EvoEngine_Plugins/MeshRepair/include/: MeshColoring.hpp
EvoEngine_Plugins/MeshRepair/src/: MeshColoring.cpp  VisibilityTest.cpp
EvoEngine_Plugins/OptiXRayTracer/: CMakeLists.txt
EvoEngine_Plugins/OptiXRayTracer/cmake/: configure_optix.cmake
EvoEngine_Plugins/OptiXRayTracer/src/: BasicPointCloudScanner.cpp  CUDAModule.cpp  OptiXRayTracer.cu  RayTracerCamera.cpp  RayTracerLayer.cpp  TriangleIlluminationEstimator.cpp  stb.cpp
EvoEngine_Plugins/PhysXPhysics/: CMakeLists.txt
EvoEngine_Plugins/PhysXPhysics/src/: RigidBody.cpp
EvoEngine_Plugins/Physics/: CMakeLists.txt
EvoEngine_Plugins/Physics/src/: Collider.cpp  PhysicsLayer.cpp
EvoEngine_Plugins/RayTracer/: CMakeLists.txt
EvoEngine_Plugins/RayTracer/include/: GpuRayTracerCamera.hpp  RayTracer.hpp
EvoEngine_Plugins/RayTracer/src/: CpuRayTracer.cpp  CpuRayTracerCamera.cpp  GpuRayTracerCamera.cpp  RayTracer.cpp
EvoEngine_Plugins/TextureBaking/: CMakeLists.txt
EvoEngine_Plugins/TextureBaking/include/: MeshTracer.hpp  MeshTracing.hpp  TextureBaker.hpp  TextureBaking.hpp
EvoEngine_Plugins/TextureBaking/src/: MeshColoring.cpp  MeshTracer.cpp  MeshTracing.cpp  TextureBaker.cpp  TextureBaking.cpp
EvoEngine_Plugins/Universe/: CMakeLists.txt
EvoEngine_Plugins/Universe/include/: PerlinNoiseStage.hpp  PlanetTerrain.hpp  PlanetTerrainSystem.hpp  StarClusterSystem.hpp  TerrainChunk.hpp  TerrainConstructionStageBase.hpp
EvoEngine_Plugins/Universe/src/: PerlinNoiseStage.cpp  PlanetTerrain.cpp  PlanetTerrainSystem.cpp  StarClusterSystem.cpp  TerrainChunk.cpp
EvoEngine_SDK/: CMakeLists.txt
PythonBinding/: CMakeLists.txt  PyDigitalAgriculture.cpp  PyEcoSysLab.cpp  PyEvoEngine.cpp
(+416 files in other folders)
