set(BILLBOARD_CLOUDS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(BILLBOARD_CLOUDS_INCLUDES
	${BILLBOARD_CLOUDS_DIRECTORY}/include
	)

file(GLOB BILLBOARD_CLOUDS_SOURCES ${BILLBOARD_CLOUDS_DIRECTORY}/src/*.cpp)

add_library(BillboardCloudsPlugin
	STATIC
	${BILLBOARD_CLOUDS_SOURCES}
	)
target_compile_definitions(BillboardCloudsPlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	${EVOENGINE_PLUGINS_DEFS}
	)	
target_include_directories(BillboardCloudsPlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${EVOENGINE_PLUGINS_INCLUDES}
	${BILLBOARD_CLOUDS_INCLUDES}
	)

set(BILLBOARD_CLOUDS_PCH ${BILLBOARD_CLOUDS_DIRECTORY}/include/BillboardClouds_PCH.hpp)
set(BILLBOARD_CLOUDS_PCH ${BILLBOARD_CLOUDS_PCH} PARENT_SCOPE)

target_precompile_headers(BillboardCloudsPlugin
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${EVOENGINE_PLUGINS_PCHS}
	${BILLBOARD_CLOUDS_PCH}
	)

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${BILLBOARD_CLOUDS_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCHS ${EVOENGINE_PLUGINS_PCHS} ${BILLBOARD_CLOUDS_PCHS} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} BILLBOARD_CLOUDS_PLUGIN PARENT_SCOPE)

set(EvoEngine_Plugins ${EvoEngine_Plugins} BillboardCloudsPlugin PARENT_SCOPE)