set(CPU_RAY_TRACER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(CPU_RAY_TRACER_INCLUDES
	${CPU_RAY_TRACER_DIRECTORY}/include
	)

file(GLOB CPU_RAY_TRACER_SOURCES ${CPU_RAY_TRACER_DIRECTORY}/src/*.cpp)

add_library(CpuRayTracerPlugin
	STATIC
	${CPU_RAY_TRACER_SOURCES}
	)
target_compile_definitions(CpuRayTracerPlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	${EVOENGINE_PLUGINS_DEFS}
	)	
target_include_directories(CpuRayTracerPlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${EVOENGINE_PLUGINS_INCLUDES}
	${CPU_RAY_TRACER_INCLUDES}
	)

set(CPU_RAY_TRACER_PCH ${CPU_RAY_TRACER_DIRECTORY}/include/CpuRayTracer_PCH.hpp)
set(CPU_RAY_TRACER_PCH ${CPU_RAY_TRACER_PCH} PARENT_SCOPE)

target_precompile_headers(CpuRayTracerPlugin
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${EVOENGINE_PLUGINS_PCHS}
	${CPU_RAY_TRACER_PCH}
	)

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${CPU_RAY_TRACER_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCHS ${EVOENGINE_PLUGINS_PCHS} ${CPU_RAY_TRACER_PCHS} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} CPU_RAY_TRACER_PLUGIN PARENT_SCOPE)

set(EvoEngine_Plugins ${EvoEngine_Plugins} CpuRayTracerPlugin PARENT_SCOPE)