set(DATASET_GENERATION_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(DATASET_GENERATION_INCLUDES
	${DATASET_GENERATION_DIRECTORY}/include
	${DATASET_GENERATION_DIRECTORY}/include/SorghumModel
	)
file(GLOB_RECURSE DATASET_GENERATION_HEADERS ${DATASET_GENERATION_DIRECTORY}/include/*.hpp)
file(GLOB_RECURSE DATASET_GENERATION_SOURCES ${DATASET_GENERATION_DIRECTORY}/src/*.cpp)

add_library(DatasetGenerationPlugin
	STATIC
	${DATASET_GENERATION_HEADERS}
	${DATASET_GENERATION_SOURCES}
	)
target_compile_definitions(DatasetGenerationPlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	${EVOENGINE_PLUGINS_DEFS}
	)	
target_include_directories(DatasetGenerationPlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${EVOENGINE_PLUGINS_INCLUDES}
	${DATASET_GENERATION_INCLUDES}
	)

set(DATASET_GENERATION_PCH ${DATASET_GENERATION_DIRECTORY}/include/DatasetGeneration_PCH.hpp)
set(DATASET_GENERATION_PCH ${DATASET_GENERATION_PCH} PARENT_SCOPE)

target_precompile_headers(DatasetGenerationPlugin
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${EVOENGINE_PLUGINS_PCHS}
	${DATASET_GENERATION_PCH}
	)

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${DATASET_GENERATION_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCHS ${EVOENGINE_PLUGINS_PCHS} ${DATASET_GENERATION_PCH} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} DATASET_GENERATION_PLUGIN PARENT_SCOPE)
