set(DIGITAL_AGRICULTURE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(DIGITAL_AGRICULTURE_INCLUDES
	${DIGITAL_AGRICULTURE_DIRECTORY}/include
	${DIGITAL_AGRICULTURE_DIRECTORY}/include/SorghumModel
	)

file(GLOB DIGITAL_AGRICULTURE_SOURCES ${DIGITAL_AGRICULTURE_DIRECTORY}/src/*.cpp)

add_library(DigitalAgriculturePlugin
	STATIC
	${DIGITAL_AGRICULTURE_SOURCES}
	)
target_compile_definitions(DigitalAgriculturePlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	${EVOENGINE_PLUGINS_DEFS}
	)	
target_include_directories(DigitalAgriculturePlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${EVOENGINE_PLUGINS_INCLUDES}
	${DIGITAL_AGRICULTURE_INCLUDES}
	)

set(DIGITAL_AGRICULTURE_PCH ${DIGITAL_AGRICULTURE_DIRECTORY}/include/DigitalAgriculture_PCH.hpp)
set(DIGITAL_AGRICULTURE_PCH ${DIGITAL_AGRICULTURE_PCH} PARENT_SCOPE)

target_precompile_headers(DigitalAgriculturePlugin
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${EVOENGINE_PLUGINS_PCHS}
	${DIGITAL_AGRICULTURE_PCH}
	)

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${DIGITAL_AGRICULTURE_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCHS ${EVOENGINE_PLUGINS_PCHS} ${DIGITAL_AGRICULTURE_PCH} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} DIGITAL_AGRICULTURE_PLUGIN PARENT_SCOPE)

set(EvoEngine_Plugins ${EvoEngine_Plugins} DigitalAgriculturePlugin PARENT_SCOPE)

set_target_properties(DigitalAgriculturePlugin PROPERTIES FOLDER "Plugins")