set(LOG_GRADING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(LOG_GRADING_INCLUDES
	${LOG_GRADING_DIRECTORY}/include
	)

file(GLOB LOG_GRADING_SOURCES ${LOG_GRADING_DIRECTORY}/src/*.cpp)

add_library(LogGradingPlugin
	STATIC
	${LOG_GRADING_SOURCES}
	)
target_compile_definitions(LogGradingPlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	${EVOENGINE_PLUGINS_DEFS}
	)	
target_include_directories(LogGradingPlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${EVOENGINE_PLUGINS_INCLUDES}
	${LOG_GRADING_INCLUDES}
	)

set(LOG_GRADING_PCH ${LOG_GRADING_DIRECTORY}/include/LogGrading_PCH.hpp)
set(LOG_GRADING_PCH ${LOG_GRADING_PCH} PARENT_SCOPE)

target_precompile_headers(LogGradingPlugin
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${EVOENGINE_PLUGINS_PCHS}
	${LOG_GRADING_PCH}
	)

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${LOG_GRADING_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCHS ${EVOENGINE_PLUGINS_PCHS} ${LOG_GRADING_PCH} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} LOG_GRADING_PLUGIN PARENT_SCOPE)

set(EvoEngine_Plugins ${EvoEngine_Plugins} LogGradingPlugin PARENT_SCOPE)

set_target_properties(LogGradingPlugin PROPERTIES FOLDER "Plugins")