set(MESH_REPAIR_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(MESH_REPAIR_INCLUDES
	${MESH_REPAIR_DIRECTORY}/include
	${MESH_REPAIR_DIRECTORY}/include/VisibilityTest
	)

file(GLOB MESH_REPAIR_SOURCES ${MESH_REPAIR_DIRECTORY}/src/*.cpp)

add_library(MeshRepairPlugin
	STATIC
	${MESH_REPAIR_SOURCES}
	)
target_compile_definitions(MeshRepairPlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	${EVOENGINE_PLUGINS_DEFS}
	)	
target_include_directories(MeshRepairPlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${EVOENGINE_PLUGINS_INCLUDES}
	${MESH_REPAIR_INCLUDES}
	)

set(MESH_REPAIR_PCH ${MESH_REPAIR_DIRECTORY}/include/MeshRepair_PCH.hpp)
set(MESH_REPAIR_PCH ${MESH_REPAIR_PCH} PARENT_SCOPE)

target_precompile_headers(MeshRepairPlugin
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${EVOENGINE_PLUGINS_PCHS}
	${MESH_REPAIR_PCH}
	)

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${MESH_REPAIR_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCHS ${EVOENGINE_PLUGINS_PCHS} ${MESH_REPAIR_PCHS} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} MESH_REPAIR_PLUGIN PARENT_SCOPE)

set(EvoEngine_Plugins ${EvoEngine_Plugins} MeshRepairPlugin PARENT_SCOPE)